feat: 추천 스냅샷 보관 정리 추가 및 스케줄러 정리
매 실행 끝에 보관 기간(3일) 이전 row 정리.
self-invocation 회피용 RecommendSnapshotCleaner 빈 신설.
WARN 메시지 한국어화 및 정상 종료 INFO 제거로 활동 알림
스케줄러 로그 정책과 일관.